--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="circle-2"></div>
 
                 <!-- Replace the image below with your own, change the "alt" text to your name -->
-                <img src="dahlia-flower.jpg" alt="Dylan Guimond">
+                <img src="dahlia-flower.png" alt="Dylan Guimond">
                 <!-- Replace the image above with your own, change the "alt" text to your name -->
 
                 <div class='overlay'></div>
@@ -67,7 +67,7 @@
 				<div class="circle-2"></div>
 
                 <!-- Replace the image below with your own, change the "alt" text to your name -->
-				<img src="dahlia-flower.jpg" alt="Dylan Guimond">
+				<img src="dahlia-flower.png" alt="Dylan Guimond">
                 <!-- Replace the image above with your own, change the "alt" text to your name -->
 
 
